# Hexapod

Firmware/Hexapod-esp32/Hexapod/: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.old
Firmware/Hexapod-esp32/Hexapod/Hexapod/: sdkconfig  sdkconfig.old
Firmware/Hexapod-esp32/Hexapod/Hexapod/components/connect_wifi/: CMakeLists.txt
Firmware/Hexapod-esp32/Hexapod/Hexapod/components/hexapod/: CMakeLists.txt  hexapod.cpp
Firmware/Hexapod-esp32/Hexapod/Hexapod/components/leg/: CMakeLists.txt  leg.cpp
Firmware/Hexapod-esp32/Hexapod/Hexapod/components/movement/: CMakeLists.txt  movement.cpp
Firmware/Hexapod-esp32/Hexapod/Hexapod/components/pca9685/: CMakeLists.txt  pca9685.c
Firmware/Hexapod-esp32/Hexapod/Hexapod/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  main.c
Firmware/Hexapod-esp32/Hexapod/Hexapod/webData/: calibration.html  web_controller.html
Firmware/Hexapod-esp32/Hexapod/Web/: calibration.html  web_controller_html.h
Firmware/Hexapod-esp32/Hexapod/main/: CMakeLists.txt  idf_component.yml  main.c
Firmware/Hexapod-stm32/: .cproject  .mxproject  Hexapod Debug.launch  Hexapod.ioc
Firmware/Hexapod-stm32/Core/Src/: main.c  usart.c
Firmware/Hexapod-stm32/Debug/: Hexapod.list  makefile  objects.list  sources.mk
Firmware/Hexapod-stm32/Debug/Core/Src/: main.cyclo  subdir.mk
Firmware/Hexapod-stm32/Debug/Drivers/PCA9685/: driver_pca9685.cyclo  driver_pca9685_basic.cyclo  stm32f407_driver_pca9685_interface.cyclo  subdir.mk
Firmware/Hexapod-stm32/Drivers/PCA9685/: driver_pca9685.c  stm32f407_driver_pca9685_interface.c
(+28 files in other folders)
